# sourcegraph

./: .eslintrc.js  BUILD.bazel  CHANGELOG.md  WORKSPACE  go.mod  go.sum  mockgen.temp.yaml  package.json  pnpm-lock.yaml  sg.config.yaml  tsconfig.all.json  tsconfig.bazel.json  tsconfig.eslint.json
client/: BUILD.bazel
client/branded/: BUILD.bazel
client/branded/src/components/panel/: TabbedPanelContent.fixtures.ts
client/browser/: BUILD.bazel
client/browser/src/browser-extension/scripts/: contentPage.main.ts
client/browser/src/browser-extension/web-extension-api/: types.ts
client/browser/src/integration/: github.test.ts  gitlab.test.ts
client/browser/src/native-integration/: integration.main.ts
client/browser/src/native-integration/phabricator/: integration.main.ts
client/browser/src/shared/cli/: search.ts
client/browser/src/shared/components/: CodeViewToolbar.tsx  GlobalDebug.tsx
client/browser/src/shared/platform/: context.ts
client/browser/src/shared/util/: context.tsx
client/build-config/: BUILD.bazel
client/build-config/src/esbuild/: stylePlugin.ts
client/client-api/: BUILD.bazel
client/client-api/src/: contribution.ts
client/codeintellify/: BUILD.bazel
client/codeintellify/src/: helpers.ts
client/common/: BUILD.bazel
client/common/src/util/: highlightNode.test.ts
client/common/src/util/markdown/: markdown.test.ts
client/extension-api/: BUILD.bazel
client/extension-api-types/: BUILD.bazel
client/extension-api-types/src/: hover.d.ts
client/extension-api/src/: sourcegraph.d.ts
client/http-client/: BUILD.bazel
client/http-client/src/graphql/apollo/: cache.ts
client/jetbrains/: BUILD.bazel
client/jetbrains/webview/: BUILD.bazel
client/observability-client/: BUILD.bazel
client/observability-server/: BUILD.bazel
client/search/: BUILD.bazel
client/search-ui/: BUILD.bazel
client/search-ui/src/components/: FileContentSearchResult.tsx
client/search-ui/src/input/__snapshots__/: SearchContextMenu.test.tsx.snap
client/search-ui/src/results/: NoResultsPage.tsx
client/search/src/helpers/: queryExample.test.ts
client/shared/: BUILD.bazel  gulpfile.js
client/shared/dev/: BUILD.bazel  generateGraphQlOperations.js  tools.bzl
client/shared/src/: schema.ts
client/shared/src/actions/: ActionItem.tsx  ActionsNavItems.tsx
client/shared/src/api/: contract.ts  viewerTypes.ts
client/shared/src/api/client/: mainthread-api.test.ts  mainthread-api.ts
client/shared/src/api/extension/: extensionApi.ts  extensionHostApi.ts  extensionHostState.ts  worker.ts
client/shared/src/api/integration-test/: languageFeatures.test.ts  testHelpers.ts  windows.test.ts
client/shared/src/codeintel/: api.ts
client/shared/src/codeintel/legacy-extensions/: api.ts  providers.ts
client/shared/src/components/: NonMonacoEditor.tsx
client/shared/src/components/ranking/: ZoektRanking.test.tsx
client/shared/src/contributions/: contributions.test.ts
client/shared/src/extensions/: createLazyLoadedController.ts  createSyncLoadedController.ts
client/shared/src/hover/: HoverOverlay.fixtures.ts  HoverOverlay.story.tsx  HoverOverlay.tsx
client/shared/src/hover/__snapshots__/: HoverOverlay.test.tsx.snap
client/shared/src/platform/: context.ts
client/shared/src/search/: stream.ts
client/shared/src/settings/: settings.ts
client/shared/src/testing/: driver.ts
client/shared/src/tracking/: utm.test.ts
client/shared/src/util/: url.ts
client/storybook/: BUILD.bazel
client/template-parser/: BUILD.bazel
client/testing/: BUILD.bazel
client/vscode/: BUILD.bazel
client/vscode/src/webview/platform/: context.ts
client/web/: BUILD.bazel  gulpfile.js
client/web-sveltekit/: package.json  svelte.config.js  vite.config.ts
client/web-sveltekit/src/: app.d.ts  app.html
client/web-sveltekit/src/lib/: CodeMirrorBlob.svelte  CodeMirrorQueryInput.module.scss  Commit.svelte  FileTree.svelte  Icon.svelte  Icons.svelte  VirtualList.svelte  blob.ts  cache.ts  intersection-observer.ts  relativeTime.ts  stores.ts  utils.ts
client/web-sveltekit/src/lib/global-styles/: colors.scss
client/web-sveltekit/src/lib/loader/: commits.ts
client/web-sveltekit/src/lib/search/: CodeMirrorQueryInput.svelte  SearchBox.svelte
client/web-sveltekit/src/lib/shared/: repo.ts
client/web-sveltekit/src/params/: objecttype.ts
client/web-sveltekit/src/routes/: +layout.svelte  +layout.ts  +page.svelte  Header.svelte  styles.css  styles.scss
client/web-sveltekit/src/routes/[...file]/: +page.svelte  +page.ts
client/web/dev/: BUILD.bazel
client/web/dev/esbuild/: build.ts  server.ts
client/web/dev/utils/: create-js-context.ts  environment-config.ts
client/web/src/: Layout.tsx  SourcegraphWebApp.tsx  auth.ts  contributions.ts  jscontext.ts
client/web/src/api/: NoApiConsole.tsx
client/web/src/backend/: features.ts  graphql.ts
client/web/src/codeintel/: ReferencesPanel.mocks.ts  ReferencesPanel.tsx
client/web/src/communitySearchContexts/: CommunitySearchContextPage.story.tsx  CommunitySearchContextPage.tsx
client/web/src/components/: Timeline.tsx  useUserHistory.ts
client/web/src/featureFlags/: featureFlags.ts
client/web/src/fuzzyFinder/: CaseInsensitiveFuzzySearch.ts  FuzzySearch.ts
client/web/src/integration/: blob-viewer.test.ts  codemirror-blob-view.test.ts  jscontext.ts
client/web/src/nav/: GlobalNavbar.story.tsx  GlobalNavbar.test.tsx  GlobalNavbar.tsx
client/web/src/platform/: context.ts
client/web/src/repo/: RepoContainer.tsx  RepoHeader.story.tsx  RepoHeader.tsx  RepoRevisionContainer.tsx  RepoRevisionSidebar.tsx  RepoRevisionSidebarSymbols.tsx  RepositoryFileTreePage.tsx  routes.tsx
client/web/src/savedSearches/: SavedSearchListPage.tsx
client/web/src/search/: SearchConsolePage.tsx  backend.tsx  helpers.test.tsx
client/web/src/settings/: MonacoSettingsEditor.tsx  SettingsArea.tsx
client/web/src/site-admin/: SiteAdminArea.tsx  SiteAdminOutboundRequestsPage.tsx  backend.ts  routes.tsx  sidebaritems.ts
client/web/src/tree/: ChildTreeLayer.tsx  Tree.tsx  TreeLayer.tsx  TreeRoot.tsx
client/wildcard/: BUILD.bazel
(+251 files in other folders)
