load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "npm_package", "ts_project")

# TODO(bazel): remove when no longer generated into src
# gazelle:exclude **/*.scss.d.ts

# gazelle:aspect_js_resolve **/sourcegraph-mark.svg //client/browser/assets
# gazelle:aspect_js_resolve **/*.scss :module_style_typings

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "browser_lib",
    srcs = [
        "code-intel-extensions.json",
        "src/browser-extension/ThemeWrapper.tsx",
        "src/browser-extension/after-install-page/AfterInstallPageContent.tsx",
        "src/browser-extension/browser-action-icon.ts",
        "src/browser-extension/environmentAssertion.ts",
        "src/browser-extension/knownCodeHosts.ts",
        "src/browser-extension/options-menu/OptionsPage.tsx",
        "src/browser-extension/options-menu/OptionsPageAdvancedSettings.tsx",
        "src/browser-extension/options-menu/components/OptionsPageContainer.tsx",
        "src/browser-extension/scripts/afterInstallPage.main.tsx",
        "src/browser-extension/scripts/auto-reloading.ts",
        "src/browser-extension/scripts/backgroundPage.main.ts",
        "src/browser-extension/scripts/contentPage.main.ts",
        "src/browser-extension/scripts/optionsPage.main.tsx",
        "src/browser-extension/util/index.ts",
        "src/browser-extension/web-extension-api/ExtensionStorageSubject.ts",
        "src/browser-extension/web-extension-api/fromBrowserEvent.ts",
        "src/browser-extension/web-extension-api/runtime.ts",
        "src/browser-extension/web-extension-api/storage.ts",
        "src/browser-extension/web-extension-api/types.ts",
        "src/end-to-end/shared.ts",
        "src/globals.d.ts",
        "src/graphql-operations.ts",
        "src/integration/context.ts",
        "src/integration/graphql.ts",
        "src/integration/shared.ts",
        "src/native-integration/integration.main.ts",
        "src/native-integration/phabricator/integration.main.ts",
        "src/native-integration/phabricator/util.ts",
        "src/shared/backend/diffs.tsx",
        "src/shared/backend/extension-api-conversion.tsx",
        "src/shared/backend/headers.ts",
        "src/shared/backend/requestGraphQl.ts",
        "src/shared/backend/search.tsx",
        "src/shared/backend/server.ts",
        "src/shared/backend/userEvents.tsx",
        "src/shared/cli/index.ts",
        "src/shared/cli/search.ts",
        "src/shared/code-hosts/bitbucket-cloud/codeHost.ts",
        "src/shared/code-hosts/bitbucket-cloud/context.ts",
        "src/shared/code-hosts/bitbucket-cloud/domFunctions.ts",
        "src/shared/code-hosts/bitbucket-cloud/fileInfo.ts",
        "src/shared/code-hosts/bitbucket-cloud/scrape.ts",
        "src/shared/code-hosts/bitbucket/api.ts",
        "src/shared/code-hosts/bitbucket/codeHost.tsx",
        "src/shared/code-hosts/bitbucket/context.tsx",
        "src/shared/code-hosts/bitbucket/domFunctions.ts",
        "src/shared/code-hosts/bitbucket/fileInfo.ts",
        "src/shared/code-hosts/bitbucket/scrape.ts",
        "src/shared/code-hosts/gerrit/codeHost.ts",
        "src/shared/code-hosts/github/codeHost.tsx",
        "src/shared/code-hosts/github/contentViews.ts",
        "src/shared/code-hosts/github/domFunctions.ts",
        "src/shared/code-hosts/github/extensions.tsx",
        "src/shared/code-hosts/github/fileInfo.ts",
        "src/shared/code-hosts/github/scrape.ts",
        "src/shared/code-hosts/github/tooltip.ts",
        "src/shared/code-hosts/github/util.tsx",
        "src/shared/code-hosts/gitlab/api.ts",
        "src/shared/code-hosts/gitlab/codeHost.ts",
        "src/shared/code-hosts/gitlab/domFunctions.ts",
        "src/shared/code-hosts/gitlab/extensions.ts",
        "src/shared/code-hosts/gitlab/fileInfo.ts",
        "src/shared/code-hosts/gitlab/scrape.ts",
        "src/shared/code-hosts/phabricator/backend.tsx",
        "src/shared/code-hosts/phabricator/codeHost.ts",
        "src/shared/code-hosts/phabricator/domFunctions.ts",
        "src/shared/code-hosts/phabricator/fileInfo.ts",
        "src/shared/code-hosts/phabricator/index.tsx",
        "src/shared/code-hosts/phabricator/scrape.ts",
        "src/shared/code-hosts/phabricator/util.tsx",
        "src/shared/code-hosts/shared/SignInButton.tsx",
        "src/shared/code-hosts/shared/ViewOnSourcegraphButton.tsx",
        "src/shared/code-hosts/shared/codeHost.tsx",
        "src/shared/code-hosts/shared/codeHostTestUtils.ts",
        "src/shared/code-hosts/shared/codeViews.ts",
        "src/shared/code-hosts/shared/contentViews.ts",
        "src/shared/code-hosts/shared/errors.ts",
        "src/shared/code-hosts/shared/extensions.tsx",
        "src/shared/code-hosts/shared/getNotificationClassName.ts",
        "src/shared/code-hosts/shared/hoverAlerts.tsx",
        "src/shared/code-hosts/shared/inject.ts",
        "src/shared/code-hosts/shared/nativeTooltips.tsx",
        "src/shared/code-hosts/shared/testHelpers.ts",
        "src/shared/code-hosts/shared/util/fileInfo.ts",
        "src/shared/code-hosts/shared/util/selections.ts",
        "src/shared/code-hosts/shared/views.ts",
        "src/shared/code-hosts/sourcegraph/inject.tsx",
        "src/shared/components/CodeViewToolbar.tsx",
        "src/shared/components/GlobalDebug.tsx",
        "src/shared/components/OpenDiffOnSourcegraph.tsx",
        "src/shared/components/OpenOnSourcegraph.tsx",
        "src/shared/components/ShortcutProvider.tsx",
        "src/shared/components/SourcegraphIconButton.tsx",
        "src/shared/components/TrackAnchorClick.tsx",
        "src/shared/components/WildcardThemeProvider.tsx",
        "src/shared/context.ts",
        "src/shared/platform/context.ts",
        "src/shared/platform/extensionHost.ts",
        "src/shared/platform/inlineExtensionsService.ts",
        "src/shared/platform/ports.ts",
        "src/shared/platform/settings.ts",
        "src/shared/platform/worker.ts",
        "src/shared/polyfills.ts",
        "src/shared/repo/backend.tsx",
        "src/shared/repo/index.tsx",
        "src/shared/sentry/index.ts",
        "src/shared/tracking/eventLogger.tsx",
        "src/shared/util/context.tsx",
        "src/shared/util/dom.tsx",
        "src/shared/util/featureFlags.ts",
        "src/shared/util/optionFlags.ts",
        "src/types/ajs/index.d.ts",
        "src/types/string-score/index.d.ts",
        "src/types/webextension-polyfill/index.d.ts",
        "//client/browser/assets",  #keep
    ],
    deps = [
        ":module_style_typings",
        "//:node_modules/@mdi/js",
        "//:node_modules/@reach/combobox",
        "//:node_modules/@sentry/browser",
        "//:node_modules/@sourcegraph/branded",
        "//:node_modules/@sourcegraph/client-api",
        "//:node_modules/@sourcegraph/codeintellify",
        "//:node_modules/@sourcegraph/common",
        "//:node_modules/@sourcegraph/extension-api-classes",
        "//:node_modules/@sourcegraph/http-client",
        "//:node_modules/@sourcegraph/shared",
        "//:node_modules/@sourcegraph/wildcard",
        "//:node_modules/@types/classnames",
        "//:node_modules/@types/expect",
        "//:node_modules/@types/history",
        "//:node_modules/@types/lodash",
        "//:node_modules/@types/node",
        "//:node_modules/@types/react",
        "//:node_modules/@types/simmerjs",
        "//:node_modules/@types/socket.io-client",
        "//:node_modules/@types/uuid",
        "//:node_modules/classnames",
        "//:node_modules/expect",
        "//:node_modules/graphql",
        "//:node_modules/history",
        "//:node_modules/jsonc-parser",
        "//:node_modules/lodash",
        "//:node_modules/mdi-react",
        "//:node_modules/mz",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:node_modules/rxjs",
        "//:node_modules/simmerjs",
        "//:node_modules/socket.io-client",
        "//:node_modules/url",
        "//:node_modules/uuid",
        "//:node_modules/webext-domain-permission-toggle",
        "//:node_modules/webextension-polyfill",
        "//client/browser/assets",
    ],
)

ts_project(
    name = "browser_tests",
    testonly = True,
    srcs = [
        "src/browser-extension/after-install-page/AfterInstallPageContent.story.tsx",
        "src/browser-extension/options-menu/OptionsPage.story.tsx",
        "src/end-to-end/bitbucket.test.ts",
        "src/end-to-end/ghe.test.ts",
        "src/end-to-end/github.test.ts",
        "src/end-to-end/gitlab.test.ts",
        "src/end-to-end/phabricator.test.ts",
        "src/integration/github.test.ts",
        "src/integration/gitlab.test.ts",
        "src/shared/code-hosts/bitbucket-cloud/codeHost.test.ts",
        "src/shared/code-hosts/bitbucket/codeHost.test.ts",
        "src/shared/code-hosts/bitbucket/domFunctions.test.ts",
        "src/shared/code-hosts/bitbucket/scrape.test.ts",
        "src/shared/code-hosts/github/codeHost.test.ts",
        "src/shared/code-hosts/github/domFunctions.test.ts",
        "src/shared/code-hosts/github/fileInfo.test.ts",
        "src/shared/code-hosts/github/tooltip.test.ts",
        "src/shared/code-hosts/github/util.test.ts",
        "src/shared/code-hosts/gitlab/codeHost.test.ts",
        "src/shared/code-hosts/gitlab/domFunctions.test.ts",
        "src/shared/code-hosts/gitlab/scrape.test.ts",
        "src/shared/code-hosts/phabricator/codeHost.test.ts",
        "src/shared/code-hosts/phabricator/domFunctions.test.ts",
        "src/shared/code-hosts/phabricator/fileInfo.test.ts",
        "src/shared/code-hosts/shared/ViewOnSourcegraphButton.test.tsx",
        "src/shared/code-hosts/shared/codeHost.test.tsx",
        "src/shared/code-hosts/shared/codeViews.test.ts",
        "src/shared/code-hosts/shared/contentViews.test.ts",
        "src/shared/code-hosts/shared/views.test.ts",
        "src/shared/code-hosts/sourcegraph/inject.test.tsx",
    ],
    deps = [
        ":browser_lib",
        ":module_style_typings",
        "//:node_modules/@sourcegraph/branded",
        "//:node_modules/@sourcegraph/common",
        "//:node_modules/@sourcegraph/extension-api-classes",
        "//:node_modules/@sourcegraph/http-client",
        "//:node_modules/@sourcegraph/shared",
        "//:node_modules/@sourcegraph/wildcard",
        "//:node_modules/@storybook/addon-actions",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/expect",
        "//:node_modules/@types/lodash",
        "//:node_modules/@types/node",
        "//:node_modules/@types/react",
        "//:node_modules/@types/sinon",
        "//:node_modules/expect",
        "//:node_modules/jest-fetch-mock",
        "//:node_modules/lodash",
        "//:node_modules/mdi-react",
        "//:node_modules/mz",
        "//:node_modules/process",
        "//:node_modules/react",
        "//:node_modules/rxjs",
        "//:node_modules/sinon",
        "//:node_modules/sourcegraph",
    ],
)

npm_package(
    name = "browser",
    srcs = [
        "package.json",
        ":browser_lib",
    ],
)
