load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "npm_package", "ts_project")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "client-api_lib",
    srcs = [
        "src/contribution.ts",
        "src/hover.ts",
        "src/index.ts",
        "src/reference.ts",
        "src/textDocument.ts",
    ],
    # TODO(bazel): why does gazelle not find all deps? See "#keep"s
    deps = [
        "//:node_modules/@sourcegraph/common",  #keep
        "//:node_modules/@sourcegraph/extension-api-classes",
        "//:node_modules/@sourcegraph/extension-api-types",  #keep
        "//:node_modules/@sourcegraph/shared",  #keep
        "//:node_modules/@sourcegraph/template-parser",  #keep
        "//:node_modules/utility-types",  #keep
    ],
)

ts_project(
    name = "client-api_tests",
    testonly = True,
    srcs = ["src/hover.test.ts"],
    deps = [
        ":client-api_lib",
        "//:node_modules/@sourcegraph/extension-api-classes",
    ],
)

npm_package(
    name = "client-api",
    srcs = [
        "package.json",
        ":client-api_lib",
    ],
)
