load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "npm_package")

package(default_visibility = ["//visibility:public"])

# gazelle:aspect_js disabled

npm_link_all_packages(name = "node_modules")

npm_package(
    name = "extension-api-types",
    srcs = [
        "package.json",
        "src/hover.d.ts",
        "src/index.d.ts",
        "src/location.d.ts",
        "src/textDocument.d.ts",
        "src/workspace.d.ts",
    ],
)
