load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "ts_project")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "observability-server",
    srcs = [
        "src/constants.ts",
        "src/honeycomb/clone-boards.ts",
        "src/libhoney.d.ts",
        "src/sdk.ts",
        "src/webBundleSize/getBundleSizeStats.ts",
        "src/webBundleSize/index.ts",
    ],
    deps = [
        "//:node_modules/@opentelemetry/semantic-conventions",
        "//:node_modules/@sourcegraph/build-config",
        "//:node_modules/@types/glob",
        "//:node_modules/@types/lodash",
        "//:node_modules/@types/node",
        "//:node_modules/@types/node-fetch",
        "//:node_modules/@types/signale",
        "//:node_modules/envalid",
        "//:node_modules/glob",
        "//:node_modules/libhoney",
        "//:node_modules/lodash",
        "//:node_modules/node-fetch",
        "//:node_modules/signale",
    ],
)

ts_project(
    name = "observability-server_tests",
    testonly = True,
    srcs = ["src/webBundleSize/getBundleSizeStats.test.ts"],
    deps = [
        ":observability-server",
        "//:node_modules/@types/node",
    ],
)
