load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "npm_package", "ts_project")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "template-parser_lib",
    srcs = [
        "src/expr/evaluator.ts",
        "src/expr/index.ts",
        "src/expr/lexer.ts",
        "src/expr/parser.ts",
        "src/index.ts",
        "src/types.ts",
    ],
)

ts_project(
    name = "template-parser_tests",
    testonly = True,
    srcs = [
        "src/expr/evaluator.test.ts",
        "src/expr/lexer.test.ts",
        "src/expr/parser.test.ts",
    ],
    deps = [":template-parser_lib"],
)

npm_package(
    name = "template-parser",
    srcs = [
        "package.json",
        ":template-parser_lib",
    ],
)
